<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notes"
            android:checked="true"
            android:icon="@drawable/ic_notes"
            android:title="@string/my_notes" />
        <item
            android:id="@+id/nav_connected_devices"
            android:icon="@drawable/ic_devices"
            android:title="@string/connected_devices" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_about_me"
            android:icon="@drawable/ic_about"
            android:title="@string/about_me" />
    </group>
</menu>
